.svn/pristine/95/95c74dc9e221ccc88a7eff60c054ec34475d8ed6.svn-base
--- COMPILATION ---
src/sudoku/SudokuBoard.java:184: error: not a statement
            candidateValues
            ^
src/sudoku/SudokuBoard.java:184: error: ';' expected
            candidateValues
                           ^
2 errors
